feat(user): cRUD for User and soft delete column added
